# loader

./: CMakeLists.txt  README.md  about.md
.github/workflows/: build.yml  update.yml
launcher/windows/: proxyLoader.c
lilac/: CMakeLists.txt
lilac/include/sapphire/core/hook/: handler.hpp  hook.hpp
lilac/include/sapphire/core/meta/: callconv.hpp  cdecl.hpp  common.hpp  defaultconv.hpp  function.hpp  hook.hpp  membercall.hpp  meta.hpp  optcall.hpp  preproc.hpp  thiscall.hpp  tuple.hpp  x86.hpp
lilac/src/hook/: CMakeLists.txt  hook.cpp  impl.hpp  ios.hpp  macos.hpp  platform.hpp  readme.md  windows.hpp
lilac/src/meta/: readme.md
lilac/test/: CMakeLists.txt  hook_test.cpp  meta_test.cpp
src/: main.cpp
src/core/: Core.cpp  Core.hpp  Hook.cpp  MacOS.cpp  MacOS.hpp  Platform.hpp  Windows.cpp  Windows.hpp
src/hooks/: dictionary_fixes.cpp  handler_fixes.cpp  save.cpp  update.cpp  update_resources.cpp
src/internal/: InternalLoader.cpp  InternalLoader.hpp  InternalMod.cpp  InternalMod.hpp
src/internal/ios/: FileWatcher.mm  crashlog.cpp
src/internal/mac/: FileWatcher.mm  crashlog.cpp
src/internal/windows/: FileWatcher.cpp  crashlog.cpp
src/load/: Event.cpp  Hook.cpp  Interface.cpp  Loader.cpp  Log.cpp  Mod.cpp  Patch.cpp  csapphire.cpp  load.cpp
src/load/ios/: Mod.mm
src/load/mac/: Mod.mm
src/load/windows/: Mod.cpp
src/mac/: gdstdlib.cpp
src/utils/: addresser.cpp  cocos.cpp  file.cpp  string.cpp  time.cpp  version.cpp
test/: shared.hpp
test/dependency/: CMakeLists.txt  main.cpp  mod.json
test/main/: CMakeLists.txt  main.cpp  mod.json
(+3 files in other folders)
